--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="bg-emerald-400">
   <head>
     <title><%= content_for(:title) || "Shop" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
