--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,7 @@
 <% quotes = ["Aaaaalrighty, then!", "Look, Spike!", "So, you're telling me there's a chance?", "Wait, what was that one in a million talk?!"] %>
 
-<%= quotes.sample %>
+<div class="card w-full bg-base-100 shadow-xl p-10">
+  <div class="card-body">
+    <h1 class="card-title text-4xl text-center"><%= quotes.sample %></h1>
+  </div>
+</div>
