--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
 <div class="navbar bg-base-100 shadow-sm">
   <div class="flex-1">
-    <a class="btn btn-ghost">
+    <%= link_to root_path, class: "btn btn-ghost" do %>
       <%= render "shared/logo" %>
-    </a>
+    <% end %>
   </div>
   <div class="flex-none">
     <div class="dropdown dropdown-end">
