--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,10 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="h-full">
+  <body class="flex flex-col h-screen">
     <%= render "shared/navbar" %>
 
-    <main class="container mx-auto p-5">
+    <main class="container mx-auto p-5 flex-grow">
       <%= yield %>
     </main>
     <%= render "shared/footer" %>
