--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,9 +1,9 @@
-<h1 class="text-2xl font-bold">Products</h1>
+<h1 class="text-2xl font-bold text-black">Products</h1>
 
 <%= link_to "New Product", new_admin_product_path, class: "btn btn-primary" %>
 
-<div class="overflow-x-auto">
-  <table class="table table-zebra w-full">
+<div class="overflow-x-auto mt-5">
+  <table class="table table-zebra w-full bg-base-100">
     <thead>
       <tr>
         <th>Name</th>
