--- a/app/views/admin/shared/_navbar.html.erb
+++ b/app/views/admin/shared/_navbar.html.erb
@@ -1,10 +1,16 @@
 <div class="navbar bg-red-400 shadow-sm">
-  <div class="flex-1 text-center">
-    <a class="btn btn-ghost">
+  <div class="flex-1">
+    <%= link_to root_path, class: "btn btn-ghost" do %>
       <%= render "shared/logo" %>
-      <span class="text-white">admin</span>
-    </a>
+    <% end %>
   </div>
-  <div class="flex-none">
+  <div class="flex items-center gap-2">
+    <% if authenticated? %>
+      <span class="text-sm">Hello, <%= Current.user.email_address %></span>
+      <%= button_to "Log Out", session_path, method: :delete, class: "btn btn-outline btn-sm" %>
+    <% else %>
+      <%= link_to "Login", new_session_path, class: "btn btn-outline btn-sm" %>
+      <%= link_to "Sign Up", new_registration_path, class: "btn btn-outline btn-sm" %>
+    <% end %>
   </div>
 </div>
