--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="h-full">
+<html class="h-full bg-emerald-400">
   <head>
     <title><%= content_for(:title) || "Admin" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
