--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -6,8 +6,8 @@
   <table class="table table-zebra w-full bg-base-100">
     <thead>
       <tr>
+        <th>SKU</th>
         <th>Name</th>
-        <th>Description</th>
         <th>Price</th>
         <th>Actions</th>
       </tr>
@@ -15,8 +15,8 @@
     <tbody>
       <% @products.each do |product| %>
         <tr>
+          <td><%= product.sku %></td>
           <td><%= product.name %></td>
-          <td><%= product.description %></td>
           <td><%= product.price %></td>
           <td class="flex gap-2">
             <%= link_to "Edit", edit_admin_product_path(product), class: "btn btn-sm btn-primary" %>
