--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "New product" %>
 
-<div class="md:w-2/3 w-full">
+<div class="w-full bg-base-100 p-5 rounded-lg">
   <h1 class="font-bold text-4xl">New product</h1>
 
   <%= render "form", product: @product %>
