--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,9 +11,9 @@
   <% end %>
 
   <div class="card lg:card-side bg-base-100 shadow-xl">
-    <figure class="p-4 lg:w-1/2 flex flex-col">
+    <figure class="p-4 lg:w-1/2 flex flex-col bg-white">
       <% if @product.image.attached? %>
-        <%= image_tag @product.image.variant(resize_to_fill: [600, 600]), class: "w-full h-auto object-cover rounded-lg shadow-md", alt: @product.name %>
+        <%= image_tag @product.image.variant(resize_to_limit: [400, 600]), class: "rounded-lg shadow-md", alt: @product.name %>
       <% else %>
         <div class="w-full h-[400px] lg:h-[600px] bg-gray-200 rounded-lg shadow-md flex items-center justify-center">
           <span class="text-gray-500">Image not available</span>
