Style products page

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -23,7 +23,8 @@
   </head>
 
   <body class="h-full">
-    <%= render "admin/shared/navbar" %>
+    <%= render "shared/navbar" %>
+    <%= render "shared/notice" %>
     <main class="container mx-auto p-5">
       <%= yield %>
     </main>
