--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -8,6 +8,7 @@
       <tr>
         <th>SKU</th>
         <th>Name</th>
+        <th>Colour</th>
         <th>Price</th>
         <th>Actions</th>
       </tr>
@@ -16,7 +17,10 @@
       <% @products.each do |product| %>
         <tr>
           <td><%= product.sku %></td>
-          <td><%= product.name %></td>
+          <td>
+            <%= link_to product.name, product_path(product), class: "link" %>
+          </td>
+          <td><%= product.colour %></td>
           <td><%= product.price %></td>
           <td class="flex gap-2">
             <%= link_to "Edit", edit_admin_product_path(product), class: "btn btn-sm btn-primary" %>
