--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
         <% end %>
       <% end %>
     <% else %>
-      <%= link_to "Login", new_session_path, class: "btn btn-ghost btn-sm" %>
+      <%= link_to "Sign In", new_session_path, class: "btn btn-ghost btn-sm" %>
       <%= link_to "Sign Up", new_registration_path, class: "btn btn-ghost btn-sm" %>
     <% end %>
 
