Move notice to a partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
 
   <body class="flex flex-col h-screen">
     <%= render "shared/navbar" %>
+    <%= render "shared/notice" %>
 
     <main class="container mx-auto p-5 flex-grow">
       <%= yield %>
