--- a/app/views/cart_items/destroy.turbo_stream.erb
+++ b/app/views/cart_items/destroy.turbo_stream.erb
@@ -1,1 +1,9 @@
-<%= turbo_stream.replace "basket_counter", partial: "shared/basket_counter" %> 
+<%= turbo_stream.replace "cart_items_list" do %>
+  <%= render partial: "cart_items/cart_items_list", locals: { cart: Current.cart } %>
+<% end %>
+
+<%= turbo_stream.replace "basket_counter" do %>
+  <%= render partial: "shared/basket_counter", locals: { cart_items_count: Current.cart.cart_items.sum(:quantity) } %>
+<% end %>
+
+<%# <%= turbo_stream.prepend "flash_messages", partial: "shared/flash_message", locals: { type: :notice, message: "#{@cart_item.product.name} removed from cart." } %> 
