--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
   </head>
 
   <body class="flex flex-col h-screen">
+    <%= tag.div notice, class: "alert alert-info", data: { turbo_temporary: true } if notice %>
+    <%= tag.div alert, class: "alert alert-error", data: { turbo_temporary: true } if alert %>
+
     <%= render "shared/navbar" %>
     <%= render "shared/notice" %>
 
