Implement basic checkout flow

--- a/app/views/cart_items/update.turbo_stream.erb
+++ b/app/views/cart_items/update.turbo_stream.erb
@@ -6,5 +6,5 @@
 <% end %>
 
 <%= turbo_stream.update "grand_total" do %>
-  <%= number_to_currency(Current.cart.total_price) %>
+  <%= number_to_currency(Current.cart.total_amount) %>
 <% end %>
