--- a/app/views/cart_items/_index.html.erb
+++ b/app/views/cart_items/_index.html.erb
@@ -30,7 +30,7 @@
           <div class="flex justify-between mb-3 text-gray-700">
             <span>Subtotal</span>
             <span id="subtotal">
-              <%= number_to_currency(Current.cart.subtotal) %>
+              <%= number_to_currency(Current.cart.subtotal_amount) %>
             </span>
           </div>
 
@@ -42,12 +42,12 @@
           <div class="flex justify-between text-xl font-bold text-gray-800 border-t pt-4 mt-4">
             <span>Grand Total</span>
             <span id="grand_total">
-              <%= number_to_currency(Current.cart.total_price) %>
+              <%= number_to_currency(Current.cart.total_amount) %>
             </span>
           </div>
 
           <div class="mt-8">
-            <%= link_to "Proceed to Checkout", "#", class: "btn btn-primary btn-block text-lg" %> <%# Replace # with checkout_path %>
+            <%= button_to "Proceed to Checkout", checkout_path, class: "btn btn-primary btn-block text-lg", data: { turbo: false } %>
           </div>
           <div class="text-center mt-12">
             <%= link_to "Continue Shopping", products_path, class: "link text-primary-500 hover:text-primary-600 font-semibold", data: { turbo: false } %>
