--- a/app/views/cart_items/destroy.turbo_stream.erb
+++ b/app/views/cart_items/destroy.turbo_stream.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <%= turbo_stream.replace "basket_counter" do %>
-  <%= render partial: "shared/basket_counter", locals: { cart_items_count: Current.cart.cart_items.sum(:quantity) } %>
+  <%= render partial: "shared/basket_counter", locals: { cart_items_count: Current.cart.items_count } %>
 <% end %>
 
 <%= turbo_stream.update "subtotal" do %>
@@ -11,5 +11,5 @@
 <% end %>
 
 <%= turbo_stream.update "grand_total" do %>
-  <%= number_to_currency(Current.cart.total_price) %>
+  <%= number_to_currency(Current.cart.total_amount) %>
 <% end %>
