--- a/app/views/shared/_basket_counter.html.erb
+++ b/app/views/shared/_basket_counter.html.erb
@@ -11,11 +11,10 @@
       class="card card-compact dropdown-content bg-base-100 z-[1] mt-3 w-52 shadow">
       <div class="card-body text-center">
           <span class="text-lg font-bold"><%= Current.cart.items_count %> Items</span>
-          <span class="text-lg text-secondary"><%= number_to_currency(Current.cart.subtotal) %> <span class="text-sm text-gray-500">(ex. VAT)</span></span>
+          <span class="text-lg text-secondary"><%= number_to_currency(Current.cart.subtotal_amount) %> <span class="text-sm text-gray-500">(ex. VAT)</span></span>
 
         <div class="card-actions p-2">
           <%= link_to "View basket", cart_path, class: "btn btn-primary btn-block", data: { turbo: false } %>
-          <%= link_to "Checkout", checkout_path, class: "btn btn-primary btn-block", data: { turbo: false } %>
         </div>
       </div>
     </div>
