--- a/app/views/cart_items/_cart_item.html.erb
+++ b/app/views/cart_items/_cart_item.html.erb
@@ -63,7 +63,7 @@
 
     <div class="text-right text-gray-700">
       <span class="md:hidden font-semibold">Total: </span>
-      <%= number_to_currency(cart_item.total_amount) %>
+      <%= number_to_currency(cart_item.subtotal_amount) %>
     </div>
 
     <div class="text-right md:text-center">
