--- a/app/views/cart_items/update.turbo_stream.erb
+++ b/app/views/cart_items/update.turbo_stream.erb
@@ -2,7 +2,7 @@
 <%= turbo_stream.update @cart_item %>
 
 <%= turbo_stream.update "subtotal" do %>
-  <%= number_to_currency(Current.cart.subtotal) %>
+  <%= number_to_currency(Current.cart.subtotal_amount) %>
 <% end %>
 
 <%= turbo_stream.update "grand_total" do %>
