--- a/app/views/pages/shop.html.erb
+++ b/app/views/pages/shop.html.erb
@@ -7,8 +7,8 @@
             <%= image_tag product.image.variant(resize_to_limit: [400, 400]), class: "w-full h-full object-cover rounded-lg", alt: product.name %>
           <% end %>
         <% else %>
-          <div class="w-full h-[400px] lg:h-[400px] bg-base-200 flex items-center justify-center">
-            <span>Image not available</span>
+          <div class="w-full h-[400px] lg:h-[400px] bg-gray-200 shadow-md flex items-center justify-center">
+            <span class="text-gray-500">Image not available</span>
           </div>
         <% end %>
       </figure>
