--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,26 +1,50 @@
-<div class="navbar bg-base-100 shadow-sm text-gray-100">
-  <div class="flex-1">
+<div class="navbar bg-base-100 shadow-sm">
+  <div class="navbar-start">
+    <div class="dropdown">
+      <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
+      </div>
+      <ul
+        tabindex="0"
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+        <li class="text-lg font-bold"><%= link_to "Home", root_path, class: current_page?(root_path) ? "text-accent" : "" %></li>
+        <li class="text-lg font-bold"><%= link_to "Shop", shop_path, class: current_page?(shop_path) ? "text-accent" : "" %></li>
+        <li class="text-lg font-bold"><%= link_to "Branding", branding_path, class: current_page?(branding_path) ? "text-accent" : "" %></li>
+        <li class="text-lg font-bold"><%= link_to "Samples", samples_path, class: current_page?(samples_path) ? "text-accent" : "" %></li>
+      </ul>
+    </div>
     <%= link_to root_path, class: "btn btn-ghost" do %>
       <%= render "shared/logo" %>
     <% end %>
   </div>
-  <div class="flex items-center gap-2">
-    <% if authenticated? %>
-      <span class="text-sm">Hello, <%= Current.user.email_address %></span>
-      <%= button_to "Log Out", session_path, method: :delete, class: "btn btn-outline btn-sm" %>
-      <% if Current.user.admin? %>
-        <%= link_to "/admin", class: "btn btn-outline btn-sm" do %>
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-          </svg>
-        <% end %>
-      <% end %>
-    <% else %>
-      <%= link_to "Sign In", new_session_path, class: "btn btn-ghost btn-sm" %>
-      <%= link_to "Sign Up", new_registration_path, class: "btn btn-ghost btn-sm" %>
-    <% end %>
-
-      <%= render "shared/basket_counter" %>
+  <div class="navbar-center hidden lg:flex">
+    <ul class="menu menu-horizontal px-1">
+      <li class="text-lg font-bold"><%= link_to "Home", root_path, class: current_page?(root_path) ? "text-accent" : "" %></li>
+      <li class="text-lg font-bold"><%= link_to "Shop", shop_path, class: current_page?(shop_path) ? "text-accent" : "" %></li>
+      <li class="text-lg font-bold"><%= link_to "Branding", branding_path, class: current_page?(branding_path) ? "text-accent" : "" %></li>
+      <li class="text-lg font-bold"><%= link_to "Samples", samples_path, class: current_page?(samples_path) ? "text-accent" : "" %></li>
+    </ul>
   </div>
+
+  <div class="navbar-end">
+    <%= render "shared/basket_counter" %>
+  </div>
+
+  <div class="dropdown dropdown-end">
+    <% if authenticated? %>
+      <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+        <div class="w-10 rounded-full">
+          <img
+            alt="Tailwind CSS Navbar component"
+            src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+        </div>
+      </div>
+      <ul
+        tabindex="0"
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+        <li><%= link_to "Admin Panel", "/admin" %></li>
+        <li><%= button_to "Logout", session_path, method: :delete %></li>
+      </ul>
+    </div>
+  <% end %>
 </div>
